--- a/lifebluds/package.json
+++ b/lifebluds/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@fontsource/poppins": "^5.0.14",
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18"
