--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "clsx": "^2.1.1",
     "next": "14.2.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
     "eslint": "^8",
